--- a/paper.tex
+++ b/paper.tex
@@ -433,6 +433,10 @@ We consider that the method presented in this paper holds great potential for st
 
 Comparing phase diagrams is as we saw not so straightforward, and further developments of our method imply testing alternative methods for this particular point. For example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong phase transitions in the space of generator parameters. The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\citep{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences, provide numerous tools to compare two dimensional fields~\citep{visser2006map,kuhnert2005comparing}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\citep{10.1371/journal.pone.0178165}. The transfer of methods used to compare sequences \citep{kruskal1983overview} or time-series \citep{liao2005clustering} is a possible way to develop measures between phase diagrams. The higher dimension of the phase diagrams we study must however be considered with caution when transferring methods, in a way analog to the application of global sensitivity indexes to spatial data \citep{lilburne2009sensitivity}. We can also note than more generally, this problem of comparing phase diagrams is a particular instance of the more generic issue of comparing patterns, which for example include unsupervised learning techniques \citep{hastie2009unsupervised}. The investigation of diverse approaches to systematically quantify differences between phase diagrams is an important potential development of our method.
 
+\subsubsection{Sensitivity of indicators to the geometry}
+
+While we investigated the sensitivity to geometry of models together with their indicators, a potential research direction is to study the dependance of indicators themselves to the spatial configuration. % TODO finish
+
 \subsubsection{Platform constraints and docking challenges}
 
 An aspect that we have not touched upon in the article with respect to the sensitivity to initial spatial conditions is the importance of the modelling platform as a constraint in the formalisation of space. For example, spatial structure may be easier to implement as a raster rather a vector in NetLogo models, which could influence the implementation choices of some non-experienced modelers. Its toroidal default setting might also have influenced the work of many modellers who did not question explicitly the representation of space. This issue is part of the docking challenge \citep{Axtelletal1996} (i.e. checking if two models can produce the same results), but more generally, it involves a description of the model and its spatial requirements more detailed than what is currently the rule.
@@ -448,8 +452,8 @@ An aspect that we have not touched upon in the article with respect to the sensi
 Although the applications we present here are limited by the simplicity of the models, we think that the method could (and should) be applied to larger models including domain mechanisms and more empirical initialisation data, for example synthetic populations. The sensitivity analysis to initial spatial conditions could then be either a replication on the spatial allocation of the synthetic population, or a series of spatial permutations of the empirical spatial inputs.
 We want to foster this extension of our work by releasing the density grids also generated, as well as the generating work-flow and the model implementation. They are available on the open repository of the project at \url{https://github.com/AnonymousAuthor2/SpaceMatters}. Future work could be done to compare these or generate grids with a larger morphological span, covering other typical urban forms that can be found in the world.
 
-Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents, transportation networks generators \citep{raimbault2018multi}, or coupled road network and population raster generators \citep{raimbault2018urban}.
-% Generators of abstract urban systems at a macroscopic scale could also be useful tools to better understand urban growth models as sketched by \cite{raimbault2018unveiling}.}  
+Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents, transportation networks generators \citep{raimbault2018multi}, or coupled road network and population raster generators \citep{raimbault2019urban}. The particular density grid generator we used here is an example among possible others, and our methodological contribution is generic as it does not depend on which generator is chosen.  
+
 
 
 \subsubsection{An emancipation opportunity for social sciences.}
@@ -457,7 +461,7 @@ Another way to go would be to implement additional generators, such as social ne
 
 As~\citet{pumain2003approche} points out in an overview of complexity approaches in geography, transfer of models and concepts between disciplines may induce a transfer of corresponding assumptions. Geography and the social sciences in general have been strongly influenced by physics in the last decades, that beside their highly enriching impact~\citep{o2015physicists}, may have softly imposed strong assumptions such as homogeneity and isotropy of space in basic models. We believe that a renewed approach on the role of space as we proposed, in other terms insisting that \emph{space matters}, is an opportunity the for social sciences to build their own stream of methodologies in the modelling domain.
 
-
+This relates to relations between empirical, conceptual and modeling dimensions of quantitative research in social sciences, as coined by \cite{livet2010ontology}. % TODO finish
 
 
 
