--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,3 +1,15 @@
+
+
+@article{livet2010ontology,
+  title={Ontology, a mediator for agent-based modeling in social science},
+  author={Livet, Pierre and M{\"u}ller, Jean Pierre and Phan, Denis and Sanders, Lena and Auatabu, Titeem},
+  journal={Journal of Artificial Societies and Social Simulation},
+  volume={13},
+  number={1},
+  year={2010}
+}
+
+
 @article{raimbault2018unveiling,
   title={Unveiling co-evolutionary patterns in systems of cities: a systematic exploration of the SimpopNet model},
   author={Raimbault, Juste},
@@ -42,13 +54,14 @@
 }
 
 
-@article{raimbault2018urban,
-  title={An Urban Morphogenesis Model Capturing Interactions between Networks and Territories},
+@incollection{raimbault2019urban,
+  title={An urban morphogenesis model capturing interactions between networks and territories},
   author={Raimbault, Juste},
-  journal={arXiv preprint arXiv:1805.05195},
-  year={2018}
+  booktitle={The Mathematics of Urban Morphology},
+  pages={383--409},
+  year={2019},
+  publisher={Springer}
 }
-
 
 @inproceedings{raimbault2018multi,
   title={Multi-modeling the morphogenesis of transportation networks},
